[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "one-chat-api"
version = "0.4.0"
description = "Python client for OneChat API: messages, files, broadcasts, locations, stickers, templates, quick replies, and image carousel."
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }
authors = [{ name = "Pargorn Ruasijan (xNewz)", email = "contact@pargorn.com" }]
dependencies = [
  "requests>=2.32.5",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/xnewz/one-chat-api"
Repository = "https://github.com/xnewz/one-chat-api"
Issues = "https://github.com/xnewz/one-chat-api/issues"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP006", "UP035"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
strict_optional = true
